--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800;900&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito Sans:wght@600;700;800;900&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     
@@ -25,9 +25,25 @@
                         <li><a href="#">Контакты</a></li>
                     </ul>
                 </nav>
-                <button type="button">$125</button>
+                <button type="button" class="button">
+                    <span class="button-item">
+                        <img src="img/cart.svg" alt="Корзина">
+                        <span class="button-count">5</span>
+                    </span>
+                    <span class="button-text">$125</span>
+                </button>
             </div>
         </div>
     </header>
+    <div class="bg">
+        <div class="container">
+            <ul class="breadcrumbs">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Меню</a></li>
+            </ul>
+            <h1 class="title">Наше Меню</h1>
+            <p class="description">Выбирай из предложенного ассортимента и мы доставим блюдо в течении часа</p>
+        </div>
+    </div>
 </body>
 </html>
