--- a/menu.html
+++ b/menu.html
@@ -58,6 +58,133 @@
                 </div>
             </div>
         </div>
+        <section class="menu">
+            <div class="container">
+                <div class="menu-header">
+                    <h2 class="menu-title">
+                        бургеры
+                    </h2>
+                    <select class = "menu-select">
+                        <option value="">Сортировать</option>
+                        <option value="up">По возрастанию</option>
+                        <option value="down">По убыванию</option>
+                    </select>
+                </div>
+                <div class="menu-grid">
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/01.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Острый бургер</p>
+                        <p class="meni-grid-price">$26</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/02.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Гриль Бургер</p>
+                        <p class="meni-grid-price">$16</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/03.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Бурег Гигант</p>
+                        <p class="meni-grid-price">$37</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/04.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Бургер с курицей</p>
+                        <p class="meni-grid-price">$18</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/05.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Бургер с курицей</p>
+                        <p class="meni-grid-price">$9</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/06.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Тройной бурегр</p>
+                        <p class="meni-grid-price">$7</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="menu-header">
+                    <h2 class="menu-title">
+                        дополнительно
+                    </h2>
+                    <select class = "menu-select">
+                        <option value="">Сортировать</option>
+                        <option value="up">По возрастанию</option>
+                        <option value="down">По убыванию</option>
+                    </select>
+                </div>
+                <div class="menu-grid">
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/07.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Сэндвич</p>
+                        <p class="meni-grid-price">$3</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/08.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Картошка Фри</p>
+                        <p class="meni-grid-price">$5</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="img/menu/09.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="meni-grid-title">Хот-Дог</p>
+                        <p class="meni-grid-price">$7</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
