--- a/menu.html
+++ b/menu.html
@@ -78,7 +78,7 @@
                         <p class="meni-grid-title">Острый бургер</p>
                         <p class="meni-grid-price">$26</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -89,7 +89,7 @@
                         <p class="meni-grid-title">Гриль Бургер</p>
                         <p class="meni-grid-price">$16</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -100,7 +100,7 @@
                         <p class="meni-grid-title">Бурег Гигант</p>
                         <p class="meni-grid-price">$37</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -111,7 +111,7 @@
                         <p class="meni-grid-title">Бургер с курицей</p>
                         <p class="meni-grid-price">$18</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -122,7 +122,7 @@
                         <p class="meni-grid-title">Бургер с курицей</p>
                         <p class="meni-grid-price">$9</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -133,7 +133,7 @@
                         <p class="meni-grid-title">Тройной бурегр</p>
                         <p class="meni-grid-price">$7</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -156,7 +156,7 @@
                         <p class="meni-grid-title">Сэндвич</p>
                         <p class="meni-grid-price">$3</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -167,7 +167,7 @@
                         <p class="meni-grid-title">Картошка Фри</p>
                         <p class="meni-grid-price">$5</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
@@ -178,7 +178,7 @@
                         <p class="meni-grid-title">Хот-Дог</p>
                         <p class="meni-grid-price">$7</p>
                         <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="/img/menu/cart1.svg" alt=""></span>
+                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
                             <span class="menu-grid-text">купить</span>
                         </button>
                     </div>
