--- a/menu.html
+++ b/menu.html
@@ -97,7 +97,7 @@
                         <div class="menu-grid-cover">
                             <img src="img/menu/03.jpg" alt="Острый бургер">
                         </div>
-                        <p class="meni-grid-title">Бурег Гигант</p>
+                        <p class="meni-grid-title">Бургер Гигант</p>
                         <p class="meni-grid-price">$37</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
@@ -130,7 +130,7 @@
                         <div class="menu-grid-cover">
                             <img src="img/menu/06.jpg" alt="Острый бургер">
                         </div>
-                        <p class="meni-grid-title">Тройной бурегр</p>
+                        <p class="meni-grid-title">Тройной бургер</p>
                         <p class="meni-grid-price">$7</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
@@ -138,6 +138,10 @@
                         </button>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="additional-menu">
+            <div class="container">
                 <div class="menu-header">
                     <h2 class="menu-title">
                         дополнительно
@@ -148,41 +152,41 @@
                         <option value="down">По убыванию</option>
                     </select>
                 </div>
-                <div class="menu-grid">
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="img/menu/07.jpg" alt="Острый бургер">
+                    <div class="menu-grid">
+                        <div class="menu-grid-item">
+                            <div class="menu-grid-cover">
+                                <img src="img/menu/07.jpg" alt="Острый бургер">
+                            </div>
+                            <p class="meni-grid-title">Сэндвич</p>
+                            <p class="meni-grid-price">$3</p>
+                            <button type="button" class="menu-grid-btn">
+                                <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
+                                <span class="menu-grid-text">купить</span>
+                            </button>
                         </div>
-                        <p class="meni-grid-title">Сэндвич</p>
-                        <p class="meni-grid-price">$3</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="img/menu/08.jpg" alt="Острый бургер">
+                        <div class="menu-grid-item">
+                            <div class="menu-grid-cover">
+                                <img src="img/menu/08.jpg" alt="Острый бургер">
+                            </div>
+                            <p class="meni-grid-title">Картошка Фри</p>
+                            <p class="meni-grid-price">$5</p>
+                            <button type="button" class="menu-grid-btn">
+                                <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
+                                <span class="menu-grid-text">купить</span>
+                            </button>
                         </div>
-                        <p class="meni-grid-title">Картошка Фри</p>
-                        <p class="meni-grid-price">$5</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="img/menu/09.jpg" alt="Острый бургер">
+                        <div class="menu-grid-item">
+                            <div class="menu-grid-cover">
+                                <img src="img/menu/09.jpg" alt="Острый бургер">
+                            </div>
+                            <p class="meni-grid-title">Хот-Дог</p>
+                            <p class="meni-grid-price">$7</p>
+                            <button type="button" class="menu-grid-btn">
+                                <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
+                                <span class="menu-grid-text">купить</span>
+                            </button>
                         </div>
-                        <p class="meni-grid-title">Хот-Дог</p>
-                        <p class="meni-grid-price">$7</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"><img src="img/menu/cart1.svg" alt=""></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
                     </div>
-                </div>
             </div>
         </section>
     </main>
