--- a/menu.html
+++ b/menu.html
@@ -17,10 +17,10 @@
         <div class="container">
             <div class="header">
                 <div class="header-items">
-                    <a href="#" class="header-logo"></a>
+                    <a href="index.html" class="header-logo"></a>
                     <nav>
                         <ul class="header-nav">
-                            <li><a href="#">Главная</a></li>
+                            <li><a href="index.html">Главная</a></li>
                             <li><a href="#" class="active">Меню</a></li>
                             <li><a href="#">О нас</a></li>
                             <li><a href="#">Контакты</a></li>
@@ -40,7 +40,7 @@
     <div class="bg">
         <div class="container">
             <ul class="breadcrumbs">
-                <li><a href="#">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Меню</a></li>
             </ul>
             <h1 class="title">Наше Меню</h1>
@@ -56,11 +56,11 @@
                         -30%
                     </h2>
                     <p class="banner-text">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
-                    <a href="#" class="banner-link">купить сейчас</a>
+                    <a href="menuBurger" class="banner-link">купить сейчас</a>
                 </div>
             </div>
         </div>
-        <section class="menu">
+        <section class="menu" id="menuBurger">
             <div class="container">
                 <div class="menu-header">
                     <h2 class="menu-title">
@@ -196,10 +196,10 @@
                 <div class="footer-item">
                     <h2>основные ссылки</h2>
                     <ul class="footer-list">
-                        <li><a href="">Меню</a></li>
-                        <li><a href="">Заказ и Доставка</a></li>
-                        <li><a href="">Методы оплаты</a></li>
-                        <li><a href="">Контакты</a></li>
+                        <li><a href="#">Меню</a></li>
+                        <li><a href="#">Заказ и Доставка</a></li>
+                        <li><a href="#">Методы оплаты</a></li>
+                        <li><a href="#">Контакты</a></li>
                     </ul>
                 </div>
                 <div class="footer-item">
