add js and style

--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <header>
+    <header id="HeaderTop">
         <div class="container">
             <div class="header">
                 <div class="header-items">
@@ -56,7 +56,7 @@
                         -30%
                     </h2>
                     <p class="banner-text">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
-                    <a href="menuBurger" class="banner-link">купить сейчас</a>
+                    <a href="#menuBurger" class="banner-link">купить сейчас</a>
                 </div>
             </div>
         </div>
@@ -225,5 +225,7 @@
             </div>
         </div>
     </footer>
+    <a href="#HeaderTop" class="button-up hidden" id="btnUp">Наверх</a>
+    <script src="js/main.js"></script>
 </body>
 </html>
