--- a/menu.html
+++ b/menu.html
@@ -149,7 +149,7 @@
                         дополнительно
                     </h2>
                 </div>
-                    <div class="menu-grid">
+                    <div class="menu-grid additional-flex">
                         <div class="menu-grid-item">
                             <div class="menu-grid-cover">
                                 <img src="img/menu/07.jpg" alt="Острый бургер">
@@ -212,7 +212,7 @@
                         </li>
                         <li>
                             <span>Адрес</span>
-                            Москва, ул. Тверская, 5, вход со двора
+                            Москва, ул. Тверская, 5
                         </li>
                     </ul>
                 </div>
