--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,9 @@
     <header id="HeaderTop">
         <div class="container">
             <div class="header">
+                <div class="header-burger">
+                    <button class="burger" onclick="openModal()"></button>
+                </div>
                 <div class="header-items">
                     <a href="index.html" class="header-logo"></a>
                     <nav>
@@ -226,6 +229,15 @@
         </div>
     </footer>
     <a href="#HeaderTop" class="button-up hidden" id="btnUp">Наверх</a>
+    <div class="modal" id="modal">
+        <ul class="header-nav">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#" class="active">Меню</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+        <button class="burger-close" onclick="closeModal()"></button>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
